# ceos-api

./: .env  .env-docker  .gitlab-ci.yml  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1cb875a077b2_update_table_asset_add_file_path.py  498cf85507da_added_assets_table.py  b5f26928c528_fix_asset_table_folder_deafault_false_.py  e431adf074c3_update_table_asset_remove_file_path.py
ceos/: config.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py  services.py  test_main.py
