[tool.poetry]
name = "ceos"
version = "0.1.0"
description = ""
authors = ["enzotorrs <enzotorres969@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.109.2"}
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
neovim = "^0.3.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
